
* Release history

** v0.6.0

- Add ~aider-refactor-book-method~ and introduced couple of refactoring techniques from [[https://www.amazon.com/Refactoring-Improving-Existing-Addison-Wesley-Signature/dp/0134757599/ref=asc_df_0134757599?mcid=2eb8b1a5039a3b7c889ee081fc2132e0&hvocijid=16400341203663661896-0134757599-&hvexpln=73&tag=hyprod-20&linkCode=df0&hvadid=721245378154&hvpos=&hvnetw=g&hvrand=16400341203663661896&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9032161&hvtargid=pla-2281435180458&psc=1][Martin Flower's Refactoring book]]
- Enhance ~aider-plain-read-string~ with better completion and history
  - This came from https://github.com/MatthewZMD/aidermacs/commit/cbb9bada03681d7ab27ce3bce1c9be9e9469da99
- Deprecate +aider-other-process-command+ menu item. aider comint session already have command completion, so there is no advantage to use this menu item.
- Update keyword completion and highlight given aider in-chat commands change
- Added ~aider-core--auto-trigger-insert-prompt~. when ~aider-auto-trigger-prompt~ is t (default off), it will automatically trigger prompt insertion in aider comint session after one of the commands (/ask, /code, /architect).
- aider--comint-send-string-syntax-highlight use comint-send-input since it is a more standard way, given suggestion from Spike-Leung
- In aider-prompt-file, C-u C-c C-n can send block line by line in aider prompt file (close to C-c C-n)
- aider-run-aider in dired, eshell, or shell buffer will ask if user wants to add `--subtree-only` flag

** v0.5.5

- magit rebase style file operation in aider-prompt-mode, and send block line by line command (request from Spike-Leung) 
  - also added cycle between /ask and /architect command
- Remove redundant savehist configuration, by LemonBreezes (the history feature with savehist for aider-plain-read-string is initially added by LemonBreezes as well)