@@ -61,7 +61,7 @@
 - Organize project with repo specific Aider prompt file
 - More Focus on code quality tool (Code Review, Agile development + AI).
 - Snippets for community prompts.
-- Simplified menu, only keep essential tools
+- Less configurations, simplified menu.
 
 * Installation
 
@@ -244,7 +244,7 @@ Otherwise, You can have helm-based completion with run the following code, after
   - The AI generated test need to be manually checked / fixed. But generally test code is easier to understand.
   - Running the unit-tests can help verifying the correctness / identifying the bug of code. It also help developer better understanding how the AI generated code work, and it can give developer more confidence on the new code.
 
-** A [[https://en.wikipedia.org/wiki/Test-driven_development][TDD]]-style AI programming workflow
+** A weak [[https://en.wikipedia.org/wiki/Test-driven_development][TDD]] style AI programming workflow
 
 1. **Implement or modify code**:
    - For existing code: Use ~aider-function-or-region-refactor~ with cursor in function or on selected region
@@ -276,6 +276,8 @@ Otherwise, You can have helm-based completion with run the following code, after
 3. **Refine code and tests**: Further refactor as needed using additional prompts or manual adjustments. ~aider-refactor-book-method~ have couple of refactoring techniques from [[https://www.amazon.com/Refactoring-Improving-Existing-Addison-Wesley-Signature/dp/0134757599/ref=asc_df_0134757599?mcid=2eb8b1a5039a3b7c889ee081fc2132e0&hvocijid=16400341203663661896-0134757599-&hvexpln=73&tag=hyprod-20&linkCode=df0&hvadid=721245378154&hvpos=&hvnetw=g&hvrand=16400341203663661896&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9032161&hvtargid=pla-2281435180458&psc=1][Martin Flower's Refactoring book]]
 
 4. Goto 1
+
+- Alternatively, if you prefer strong TDD practice, you might want to try ~aider-tdd-cycle~, it will follow red-green-refactor cycle.
 
 * FAQ
 
